--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -290,6 +290,7 @@ libdogecoin_consensus_a_SOURCES = \
   amount.h \
   arith_uint256.cpp \
   arith_uint256.h \
+  chainparams.cpp \
   consensus/merkle.cpp \
   consensus/merkle.h \
   consensus/params.cpp \
