Add util.cpp to consensus library sources to resolve linker errors

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -321,6 +321,8 @@ libdogecoin_consensus_a_SOURCES = \
   uint256.h \
   utilstrencodings.cpp \
   utilstrencodings.h \
+  util.cpp \
+  util.h \
   version.h
 
 # common: shared between bitcoind, and bitcoin-qt and non-server tools
