Update Windows build to use sequential and verbose make output for better debugging

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -166,7 +166,7 @@ jobs:
           --disable-tests --disable-bench \
           --with-boost="${BOOST_ROOT}"
           
-        make -j$(nproc)
+        make -j1 V=1
         
         # 🔍 Debug: Check what binaries were actually created
         echo "=== Checking what binaries exist in src/ ==="
