--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,72 @@
 .#*
 .*.swp
 .DS_Store
+
+# Binaries
 */src/poemd
 */src/poem-cli
 */src/poem-tx
+*/src/poem-qt
 */src/dogecoind
 */src/dogecoin-cli
 */src/dogecoin-tx
 */src/brrrfren-qt
 */src/brrrfren-cli
 */src/brrrfren-tx
+
+# Build directories
+build-aux/
+autom4te.cache/
+dist/
+package/
+*.in
+aclocal.m4
+configure
+config.log
+config.status
+libtool
+Makefile
+Makefile.in
+src/Makefile
+src/Makefile.in
+src/config/bitcoin-config.h
+src/config/bitcoin-config.h.in
+src/config/stamp-h1
+src/poem-config.h
+src/poem-config.h.in
+src/obj/
+*.moc
+*.qm
+*.P
+*.d
+*.pc
+*.pc.in
+*.la
+*.lo
+.libs/
+.deps/
+*.loT
+*.a
+*.la
+*.lai
+*.o
+*.Po
+*.plist
+*.dirstamp
+*.trs
+*.gcda
+*.gcno
+*.gcov
+*.plist
+*.dmg
+*.pyc
+*.pyo
+*.pyd
+*.swp
+*.swo
+*~
+*.rej
+*#*
+.#*
+.*.swp
+.DS_Store
