Fix release upload to only run on tags and add artifact upload for branch builds

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -339,6 +339,7 @@ jobs:
       shell: bash
 
     - name: Upload binaries to release
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: |
@@ -346,3 +347,12 @@ jobs:
           ${{ env.ASSET_NAME }}.sha256
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Upload build artifacts
+      if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.os }}-binaries
+        path: |
+          ${{ env.ASSET_NAME }}
+          ${{ env.ASSET_NAME }}.sha256
