--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -158,9 +158,19 @@ jobs:
         # Force configure to accept that boost_system is available
         export ax_cv_boost_system=yes
         
-        # 🎯 FIX: Force C++17 + disable tests + add missing Windows libs
-        export CXXFLAGS="-Og -std=c++17"
-        export LDFLAGS="-lbcrypt"
+        # Set Qt related environment variables
+        export QT5_PREFIX=/mingw64/lib/qt5
+        export PATH="$PATH:/mingw64/bin:/mingw64/lib/qt5/bin"
+        export PKG_CONFIG_PATH="/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig"
+        
+        # 🔍 Debug: Check if Qt is installed correctly
+        echo "Checking Qt installation:"
+        ls -la /mingw64/include/qt5/QtCore
+        pkg-config --list-all | grep -i qt
+        
+        # 🎯 FIX: Force C++17 + disable tests + add missing Windows libs + include Qt paths
+        export CXXFLAGS="-Og -std=c++17 -I/mingw64/include/qt5 -I/mingw64/include/qt5/QtCore -I/mingw64/include/qt5/QtWidgets -I/mingw64/include/qt5/QtGui"
+        export LDFLAGS="-lbcrypt -L/mingw64/lib -L/mingw64/lib/qt5"
         
         ./configure \
           CPPFLAGS="-I${BOOST_INCLUDEDIR}" \
@@ -354,5 +364,5 @@ jobs:
       with:
         name: ${{ matrix.os }}-binaries
         path: |
-          ${{ env.ASSET_NAME }}
-          ${{ env.ASSET_NAME }}.sha256
+          brrrfren-${{ matrix.os == 'ubuntu-22.04' && 'linux' || 'windows' }}-x64.${{ matrix.os == 'ubuntu-22.04' && 'tar.gz' || 'zip' }}
+          brrrfren-${{ matrix.os == 'ubuntu-22.04' && 'linux' || 'windows' }}-x64.${{ matrix.os == 'ubuntu-22.04' && 'tar.gz' || 'zip' }}.sha256
