Add autotools packages (autoconf, automake, libtool) to fix missing autoreconf

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -55,6 +55,9 @@ jobs:
         install: |
           git
           base-devel
+          autoconf
+          automake
+          libtool
           mingw-w64-x86_64-toolchain
           mingw-w64-x86_64-boost
           mingw-w64-x86_64-openssl
