Fix YAML syntax for patch creation with line-by-line approach

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -216,26 +216,25 @@ jobs:
         
         # Create a patch for Makefile.qt.include to ensure dynamic linking for Qt GUI
         echo "Creating patch to ensure dynamic linking for Qt GUI..."
-        cat > qt_dynamic_patch.diff << 'EOF'
---- src/Makefile.qt.include.orig	2023-01-01 00:00:00.000000000 +0000
-+++ src/Makefile.qt.include	2023-01-01 00:00:00.000000000 +0000
-@@ -1,3 +1,7 @@
-+# IMPORTANT: This file has been patched by the GitHub workflow
-+# to ensure dynamic linking for Qt GUI components while keeping
-+# static linking for other components where appropriate.
-+#
- # Copyright (c) 2013-2016 The Bitcoin Core developers
- # Distributed under the MIT software license, see the accompanying
- # file COPYING or http://www.opensource.org/licenses/mit-license.php.
-@@ -454,7 +458,7 @@
-   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \
-   $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS)
--qt_dogecoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
-+qt_dogecoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS)
- qt_dogecoin_qt_LIBTOOLFLAGS = --tag CXX
- 
- #locale/foo.ts -> locale/foo.qm
-EOF
+        # Create the patch file properly line by line
+        echo '--- src/Makefile.qt.include.orig	2023-01-01 00:00:00.000000000 +0000' > qt_dynamic_patch.diff
+        echo '+++ src/Makefile.qt.include	2023-01-01 00:00:00.000000000 +0000' >> qt_dynamic_patch.diff
+        echo '@@ -1,3 +1,7 @@' >> qt_dynamic_patch.diff
+        echo '+# IMPORTANT: This file has been patched by the GitHub workflow' >> qt_dynamic_patch.diff
+        echo '+# to ensure dynamic linking for Qt GUI components while keeping' >> qt_dynamic_patch.diff
+        echo '+# static linking for other components where appropriate.' >> qt_dynamic_patch.diff
+        echo '+#' >> qt_dynamic_patch.diff
+        echo ' # Copyright (c) 2013-2016 The Bitcoin Core developers' >> qt_dynamic_patch.diff
+        echo ' # Distributed under the MIT software license, see the accompanying' >> qt_dynamic_patch.diff
+        echo ' # file COPYING or http://www.opensource.org/licenses/mit-license.php.' >> qt_dynamic_patch.diff
+        echo '@@ -454,7 +458,7 @@' >> qt_dynamic_patch.diff
+        echo '   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \\' >> qt_dynamic_patch.diff
+        echo '   $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS)' >> qt_dynamic_patch.diff
+        echo '-qt_dogecoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)' >> qt_dynamic_patch.diff
+        echo '+qt_dogecoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS)' >> qt_dynamic_patch.diff
+        echo ' qt_dogecoin_qt_LIBTOOLFLAGS = --tag CXX' >> qt_dynamic_patch.diff
+        echo ' ' >> qt_dynamic_patch.diff
+        echo ' #locale/foo.ts -> locale/foo.qm' >> qt_dynamic_patch.diff
         
         # Run configure with appropriate options
         ./configure \
