--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,8 @@ jobs:
           - name: x86_64-linux
             host: x86_64-unknown-linux-gnu
             packages: python3
-            dep-opts: ""
-            config-opts: "--with-gui=qt5 --enable-glibc-back-compat LDFLAGS=-static-libstdc++"
+            dep-opts: "CXXFLAGS='-fPIC'"
+            config-opts: "--with-gui=qt5 --enable-glibc-back-compat CXXFLAGS='-fPIC' LDFLAGS='-static-libstdc++ -Wl,-O2 -Wl,--as-needed'"
             goal: install
             
           - name: x86_64-win
