fix: Use ubuntu-22.04 for Windows cross-compilation
- Changes Windows build to run on ubuntu-22.04 instead of windows-latest
- Ensures apt-get commands work for installing cross-compilation tools
- Maintains static Qt linking through depends system

--- a/.github/workflows/build-wallets-combined.yml
+++ b/.github/workflows/build-wallets-combined.yml
@@ -39,7 +39,7 @@ jobs:
             packages: python3
             
           - name: x86_64-win
-            os: windows-latest
+            os: ubuntu-22.04
             host: x86_64-w64-mingw32
             packages: python3 nsis g++-mingw-w64-x86-64 wine64 bc wine-binfmt
             postinstall: |
